--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello world :P
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Nolan Pelino's CSCE 190 class</title>
+    </head>
+    <body>
+       <h1>Nolan Pelino CSCE 190 Site </h1>
+        <p>I Hope I dont fail</p>
+    </body>
+</html>
