--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <title>Nolan Pelino's CSCE 190 class</title>
     </head>
     <body>
-       <h1>Nolan Pelino CSCE 190 Site </h1>
-        <p>I Hope I dont fail</p>
+       <h1>Nolan Pelino's CSCE 190 Site </h1>
+        <section class="assignment">
+            <img src = "Annotation 2020-08-30 124608.png">
+        </section>
     </body>
 </html>
