--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
        <h1>Nolan Pelino's CSCE 190 Site </h1>
         <section class="assignment">
             <img src = "Annotation 2020-08-30 124608.png">
+            <section class="ass-detials">
+                <h2>Problem Statement: Costco Checkout</h2>
+                <p>
+                    Costco shoppers are upset by the long lines at checkout and feel that time is being wasted. Our solution is to provide customers with a shortened experience when checking out at Costco.
+                </p>
+
+            </section>
         </section>
     </body>
 </html>
