--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <p>
                     Costco shoppers are upset by the long lines at checkout and feel that time is being wasted. Our solution is to provide customers with a shortened experience when checking out at Costco.
                 </p>
-
+                <a href="4W's.pdf"> Problem Statement pdf</a>
             </section>
         </section>
     </body>
