--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
        <h1>Nolan Pelino's CSCE 190 Site </h1>
         <section class="assignment">
-            <img src = "Annotation 2020-08-30 124608.png">
+            <a href="4W's.pdf"> <img src = "Annotation 2020-08-30 124608.png"> </a>
             <section class="ass-detials">
                 <h2>Problem Statement: Costco Checkout</h2>
                 <p>
