--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     </head>
     <body>
        <h1>Nolan Pelino's CSCE 190 Site </h1>
+
+
         <section class="assignment">
-            <a href="4W's.pdf"> <img src = "Annotation 2020-08-30 124608.png"> </a>
+            <a href="files/4W's.pdf"> <img src = "images/Annotation 2020-08-30 124608.png"> </a>
             <section class="ass-detials">
-                <h2>Problem Statement: Costco Checkout</h2>
+                <a href="files/4W's.pdf"><h2>Problem Statement: Costco Checkout</h2></a>
                 <p>
                     Costco shoppers are upset by the long lines at checkout and feel that time is being wasted. Our solution is to provide customers with a shortened experience when checking out at Costco.
                 </p>
-                <a href="4W's.pdf"> Problem Statement pdf</a>
             </section>
         </section>
+
+        
+        
     </body>
 </html>
