--- a/index.html
+++ b/index.html
@@ -6,13 +6,24 @@
     <body>
        <h1>Nolan Pelino's CSCE 190 Site </h1>
 
-
-        <section class="assignment">
+        <!--4W'S pdf-->
+        <section class="assignment"> 
             <a href="files/4W's.pdf"> <img src = "images/Annotation 2020-08-30 124608.png"> </a>
             <section class="ass-detials">
                 <a href="files/4W's.pdf"><h2>Problem Statement: Costco Checkout</h2></a>
                 <p>
                     Costco shoppers are upset by the long lines at checkout and feel that time is being wasted. Our solution is to provide customers with a shortened experience when checking out at Costco.
+                </p>
+            </section>
+        </section>
+
+        <!--Affinity Diagram-->
+        <section class="assignment">
+            <a href="files/Affinity Diagram.pdf"> <img src = "images/Affinity Diagram 1.png"> </a>
+            <section class="ass-detials">
+                <a href="files/Affinity Diagram.pdf"><h2>Affinity Diagram: Costco Checkout</h2></a>
+                <p>
+                    Our group brought up ideas surround the long lines a Costco and created an Affinity Diagram to plan.
                 </p>
             </section>
         </section>
