--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+    
+    <link href="styles.css" rel = "stylesheet" type = "text/css">
     <head>
         <title>Nolan Pelino's CSCE 190 class</title>
     </head>
@@ -24,6 +26,17 @@
                 <a href="files/Affinity Diagram.pdf"><h2>Affinity Diagram: Costco Checkout</h2></a>
                 <p>
                     Our group brought up ideas surround the long lines a Costco and created an Affinity Diagram to plan.
+                </p>
+            </section>
+        </section>
+
+         <!--Persona-->
+         <section class="assignment">
+            <a href="files/CSCE 190 Persona.pdf"> <img src = "images/Screenshot 2020-09-27 171035.png"> </a>
+            <section class="ass-detials">
+                <a href="files/CSCE 190 Persona.pdf"><h2>Personas: 4 Personas for Costco shopping</h2></a>
+                <p>
+                    Our group created personas that represent the average Costco shopper.
                 </p>
             </section>
         </section>
