--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
             </section>
         </section>
 
+        <!--StoryBoard-->
+        <section class="assignment">
+            <a href="files/story-board.pdf"> <img src = "images/stryBrdScrn.png"> </a>
+            <section class="ass-detials">
+                <a href="files/story-board.pdf"><h2>Storyboard</h2></a>
+                <p>
+                    A comic strip illustrating examples for real world use of our Costco plan.
+                </p>
+            </section>
+        </section>
+
         
         
     </body>
