--- a/index.html
+++ b/index.html
@@ -52,6 +52,19 @@
             </section>
         </section>
 
+        <!--Sketch-->
+        <section class="assignment">
+            <a href="files/Sketches.pdf"> <img src = "images/sketchscrnsht.png"> </a>
+            <section class="ass-detials">
+                <a href="files/Sketches.pdf"><h2>SKetches</h2></a>
+                <p>
+                    Sketches that are examples for our mobile app.
+                </p>
+            </section>
+        </section>
+
+
+
         
         
     </body>
