--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section class="assignment">
             <a href="files/Sketches.pdf"> <img src = "images/sketchscrnsht.png"> </a>
             <section class="ass-detials">
-                <a href="files/Sketches.pdf"><h2>SKetches</h2></a>
+                <a href="files/Sketches.pdf"><h2>Sketches</h2></a>
                 <p>
                     Sketches that are examples for our mobile app.
                 </p>
