--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
             </section>
         </section>
 
+        <!--Prototype-->
+        <section class="assignment">
+            <a href="https://youtube.be/GRoy4IOUThE"> <img src = "images/protophoto.heic"> </a>
+            <section class="ass-detials">
+                <a href="https://youtube.be/GRoy4IOUThE"><h2>Paper Prototype</h2></a>
+                <p>
+                    A paper Prototype for our costco app.
+                </p>
+            </section>
+        </section>
+
 
 
         
