--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
         <!--Prototype-->
         <section class="assignment">
-            <a href="https://youtube.be/GRoy4IOUThE"> <img src = "images/protophoto.heic"> </a>
+            <a href="https://youtu.be/GRoy4IOUThE"> <img src = "images/protophoto.heic"> </a>
             <section class="ass-detials">
-                <a href="https://youtube.be/GRoy4IOUThE"><h2>Paper Prototype</h2></a>
+                <a href="https://youtu.be/GRoy4IOUThE"><h2>Paper Prototype</h2></a>
                 <p>
                     A paper Prototype for our costco app.
                 </p>
