--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
                 </p>
             </section>
         </section>
+        <!---Utility-->>
+        <section class="assignment">
+            <a href="files/Usability.pdf"> <img src = "images/utTestPhoto.png"> </a>
+            <section class="ass-detials">
+                <a href="files/Usability.pdf"><h2>Utility Test</h2></a>
+                <p>
+                    Tested my paper prototype to find flaws and make improvements.
+                </p>
+            </section>
+        </section>
 
 
 
