--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
             </section>
         </section>
 
+        <!---Low Fidelity-->>
+        <section class="assignment">
+            <a href="files/CSCE 190 prototype-html/index.html"> <img src = "images/lowf.png"> </a>
+            <section class="ass-detials">
+                <a href="files/CSCE 190 prototype-html/index.html"><h2>Low-Fidelity Prototype</h2></a>
+                <p>
+                    Created a low Fidelity version of our app
+                </p>
+            </section>
+        </section>
+
 
 
         
