--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
             </section>
         </section>
 
-        <!---Low Fidelity-->>
+        <!---Proto.io Prototype-->>
         <section class="assignment">
             <a href="files/CSCE 190 prototype-html/index.html"> <img src = "images/lowf.png"> </a>
             <section class="ass-detials">
-                <a href="files/CSCE 190 prototype-html/index.html"><h2>Low-Fidelity Prototype</h2></a>
+                <a href="files/CSCE 190 prototype-html/index.html"><h2>Prototype</h2></a>
                 <p>
-                    Created a low Fidelity version of our app
+                    Created a prototype version of our app
                 </p>
             </section>
         </section>
