--- a/index.html
+++ b/index.html
@@ -96,6 +96,16 @@
         </section>
 
 
+        <!--Pres-->
+        <section class="assignment">
+            <a href="https://youtu.be/Xo5_CkB6Vhc"> <img src = "images/protophoto.heic"> </a>
+            <section class="ass-detials">
+                <a href="https://youtu.be/Xo5_CkB6Vhc"><h2>Hifi Presentation</h2></a>
+                <p>
+                    A presentation for our costco app.
+                </p>
+            </section>
+        </section>
 
         
         
